# taleweaver

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  project.godot  settings.gradle  test.gd  test.tscn
android/: build.gradle  update_sdl.sh
android/src/androidTest/java/net/leezh/taleweaver/: ExampleInstrumentedTest.java
android/src/main/: AndroidManifest.xml
android/src/main/java/net/leezh/taleweaver/: MainActivity.java
android/src/main/java/org/libsdl/app/: SDLActivity.java
android/src/main/res/values/: strings.xml  themes.xml
android/src/main/res/values-night/: themes.xml
android/src/main/res/values-v27/: themes.xml
android/src/test/java/net/leezh/taleweaver/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
shaders/: camera.frag  camera.vert  heightmap.frag  heightmap.vert  render.frag  render.vert  render_flat.frag  render_flat.vert
src/: gl.hpp  heightmap.c  heightmap.cpp  heightmap.h  heightmap.hpp  main.c  main.cpp  main.h  render.c  render.cpp  render.h  render.hpp  shader.c  shader.cpp  shader.h  shader.hpp  spatial.hpp  textures.c  textures.cpp  textures.hpp  window.cpp  window.hpp
src/components/: camera.cpp  camera.hpp  heightmap.cpp  heightmap.hpp  render.cpp  render.hpp
src/core/: gl.cpp  gl.hpp  window.cpp  window.hpp
system/: character.gd  defs.gd  encounter.gd  equip.gd  equipment.gd  item.gd  item_db.gd  party.gd  party_db.gd
tools/resource/: cstrdump.py  hexdump.py  resource.cmake
world/: equip_db.tscn  item_db.tscn  player_party.tscn
world/characters/: godette.gd
world/items/: basic_blaster.gd
